# new-user-auto-setup

./: README.rst  pyproject.toml
new_user_auto_setup/: NewUserRequest.py  new_user_request.py
tests/: test_new_user_auto_setup.py  test_new_user_request.py
